kubernetes/k.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-example
spec:
  controller: k8s.io/ingress-nginx

# Must Apply
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/aws/deploy.yaml

---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx-example
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: test
#             port:
#               number: 80

# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: testing
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: testing
#   template:
#     metadata:
#       labels:
#         app: testing
#     spec:
#       containers:
#       - name: simple-web
#         image: nginx
#         ports:
#         - containerPort: 80

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: test
#   labels:
#     app: test
# spec:
#   ports:
#   - name: "http"
#     port: 80
#     targetPort: 80
#     protocol: TCP
#   selector:
#     app: testing
#   type: ClusterIP
