kubernetes/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: example-class
spec:
  controllerName: example.com/gateway-controller

---

# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: example-gateway
# spec:
#   gatewayClassName: example-class
#   listeners:
#   - name: http
#     protocol: HTTP
#     port: 80


---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example
  annotations:
    cert-manager.io/issuer: foo
spec:
  gatewayClassName: example-class
  listeners:
    - name: http
      hostname: ahmadkaleem2.link
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-com-tls

---


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-httproute
spec:
  parentRefs:
  - name: example
  hostnames:
  - "ahmadkaleem2.link"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fastapi-helloworld
      port: 80
